<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewChallengeDialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/challengeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/editChallengeName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/challenge_name_hint"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/roundsLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelRounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left"
                android:paddingRight="5dip"
                android:text="@string/challenge_rounds"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/textViewRounds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/sign_unknown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarRounds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:progress="0" />


        <LinearLayout
            android:id="@+id/operationLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelOperation"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingRight="5dip"
                android:text="@string/challenge_operation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <Spinner
                android:id="@+id/challengeOperationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/signs_array"
                android:prompt="@string/text_choose_operation" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maxLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left"
                android:paddingRight="5dip"
                android:text="@string/challenge_max"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/textViewMax"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/sign_unknown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarMax"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="0" />

        <CheckBox
            android:id="@+id/checkBoxMax"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_maxwhich"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <LinearLayout
            android:id="@+id/placesLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left"
                android:paddingRight="5dip"
                android:text="@string/challenge_places"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
            <TextView
                android:id="@+id/textViewPlaces"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/sign_unknown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
            </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarPlaces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:progress="0" />

        <LinearLayout
            android:id="@+id/tableLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingRight="5dip"
                android:text="@string/challenge_table"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
            <TextView
                android:id="@+id/textViewTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/sign_unknown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />
            </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:progress="0" />

        <CheckBox
            android:id="@+id/checkBoxBool1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_unknown"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <CheckBox
            android:id="@+id/checkBoxBool2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_unknown"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />
    </LinearLayout>

</ScrollView>